[tool.poetry]
name = "passata"
version = "0.2.0"
description = "A simple password manager, inspired by pass."
authors = ["Panagiotis Ktistakis <panktist@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.8"
pyyaml = "^6.0.2"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
ipdb = "*"
mypy = "*"
pytest = "*"
types-pyyaml = "*"
pyupgrade = "*"
ruff = "*"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",  # keep D211
    "D213",  # keep D212
    "S101",  # assert
    "S603",  # subprocess-without-shell-equals-true
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument
    "COM812",  # missing-trailing-comma
    "PLR0913"  # too-many-arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D100", "D102", "D103", "D104", "PLR2004", "T201"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
